// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic mode useName works 1`] = `
<p>
  Hello there, 
  Alice
  ! Click to change me.
</p>
`;

exports[`basic mode useName works 2`] = `undefined`;

exports[`reducers mode useName works 1`] = `
<p>
  Hello there, 
  Alice
  ! Click to change me.
</p>
`;

exports[`reducers mode useName works 2`] = `
<p>
  Hello there, 
  Shane
  ! Click to change me.
</p>
`;

exports[`regression - function state values useFilter works 1`] = `
<p>
  Filter: 
  t =&gt; !t.completed
</p>
`;

exports[`regression - function state values useFilter works 2`] = `
<p>
  Filter: 
  t =&gt; t.completed
</p>
`;
